# TrackBP

./: .gitignore  README.md  docker-compose.yml  nginx-reverse.conf
.github/workflows/: rust.yml
TrackServer/: Cargo.toml
TrackServer/src/: cors.rs  lib.rs
TrackServer/src/routes/: get_players.rs  get_raceinfo.rs  mod.rs  ws.rs
TrackSite/: README.md  package-lock.json  package.json
TrackSite/src/: App.vue
TrackSite/src/functions/: bests.ts  time.ts
TrackSite/src/router/: index.ts
TrackSite/src/stores/: playersStore.ts
TrackSite/src/types/: playerType.ts  raceType.ts
TrackSite/src/views/: HomeView.vue  LeaderBoard.vue
TrackSystem/: Core.cs  DB.cs  RustBridge.cs  Time.cs  TrackSystem.csproj  TrackSystem.sln
TrackSystem/DBControllers/: PersonalBestController.cs  RaceInfoController.cs  SectorController.cs  TimeTrapController.cs
TrackSystem/Events/: Manager.cs  Player.cs  PluginEvents.cs
TrackSystem/Functions/: SendPlayerUpdate.cs  SendRaceControllMenu.cs  SetPlayerColor.cs  SetPlayerNumber.cs  WSUtils.cs
TrackSystem/Properties/: AssemblyInfo.cs
TrackSystem/Types/: PersonalBestModel.cs  RaceInfoModel.cs  RustPlayer.cs  SectorModel.cs  ShVehicleAccessor.cs  TimeTrapModel.cs  Vec3.cs  WebSocketMessage.cs
