[package]
name = "TrackServer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_ws = "0.1.1"
futures = "0.3.31"
once_cell = "1.21.3"
async-stream = "0.3.6"
futures-util = "0.3.31"
json5 = "0.4.1"